# wasm_dng_sdk_research

./: CMakeLists.txt  README.md  hello.html  hello.js  main.cpp  worker.js
dng_sdk_1_7/dng_sdk/source/: dng_area_task.cpp  dng_jpeglib.h  dng_jxl.cpp  dng_preview.h  dng_render.cpp  dng_render.h
dng_sdk_1_7/libjpeg/: example.c
dng_sdk_1_7/xmp/toolkit/XMPCore/source/: XMPDocOps-Utils.cpp
dng_sdk_1_7/xmp/toolkit/public/include/: XMP_Environment.h
dng_sdk_1_7/xmp/toolkit/source/: SuppressSAL.h
jpeg-xl/include/jxl/: jxl_export.h
jpeg-xl/lib/: libIex-3_2.31.dylib  libIlmThread-3_2.31.dylib  libImath-3_1.29.dylib  libOpenEXR-3_2.31.dylib  libOpenEXRCore-3_2.31.dylib  libOpenEXRUtil-3_2.31.dylib  libgif.dylib  libjpeg.8.dylib  libjxl.0.10.3.dylib  libjxl.0.10.dylib  libjxl_cms.0.10.3.dylib  libjxl_cms.0.10.dylib  libjxl_extras_codec.0.10.3.dylib  libjxl_extras_codec.0.10.dylib  libjxl_threads.0.10.3.dylib  libjxl_threads.0.10.dylib  liblcms2.2.dylib  libpng16.16.dylib
libdng/: CMakeLists.txt  dnghost.cpp  dnghost.h
rt_curves_lib/: CMakeLists.txt
rt_curves_lib/include/: color.h  curves.h  iccstore.h  opthelper.h  rt_api.h
rt_curves_lib/src/: color.cc  curves.cpp  diagonalcurves.cc  rt_api.cpp
